cleaned up the style sheet, added wrtings

--- a/campaigns.html
+++ b/campaigns.html
@@ -4,38 +4,38 @@ layout: default
 <section>
 	<p><a href="{{site.baseurl}}/works"> < Back to works</a></p>
 </section>
-<h3>Exotel Campaigns</h3>
+<h1>Exotel Campaigns</h1>
 <p class="lead">How might we enable the customers to drive growth and engagement using calls and SMS?</p>
 <section>
-    <h4>The Context</h4>
+    <h2>The Context</h2>
     <p>
     Exotel is a cloud telephony platform. It powers voice and SMS communication of businesses. The customer base of Exotel covers both small businesses and large enterprises.
 	Exotel supports call and SMS campaigns, and it generates significant revenue. 
     </p> 
 </section>
 <section>
-	<h4>My Role</h4>
+	<h2>My Role</h2>
 	<p>I was responsible for research and design. I worked along with product managers and engineers. Also, involved sales, customer success and customer support teams throughout the process.</p>
 </section>
 <section>
-	<h4>The Problem</h4>
+	<h2>The Problem</h2>
 	<p>
 	A campaign service on top of cloud based telecom infrastructure has a lot advantages over the traditional call or SMS campaigns. But we haven't explored those possibilities to provide better campaign experience. The campaign offering was primitive, and we received a lot of customer feedbacks related to it.
 	</p>
 </section>
 <section>
-	<h4>Who Uses What?</h4>
+	<h2>Who Uses What?</h2>
 	<p>Campaigns were majorly used for promotional purposes, to drive growth or to engage customers. That means the users vary from growth hacker in the marketing team to customer engagement or operation manager. Also, there are transactional use cases for campaigns. For example, pick up scheduling in e-commerce. </p>
 </section>
 <section>
-	<h4>Research</h4>
+	<h2>Research</h2>
 	<p>We have been doing continues customer interviews to identify issues and opportunities related to the product and platform. Along with that, the analysis of customer support tickets helped us to get an overview of issues related to campaigns.</p>
 	<figure class="article-img">
 		<img img-small src="{{site.baseurl}}/assets/images/campaigns/interview.png">
 		<figcaption>Questions and Findings</figcaption>
 	</figure>
 	<section>
-		<h5>Insights</h5>
+		<h3>Insights</h3>
 		<p>
 			The major insights from the research were the following. 
 		</p>
@@ -51,15 +51,15 @@ layout: default
 	</section>
 </section>
 <section>
-	<h4>The Design Sprint</h4>
+	<h2>The Design Sprint</h2>
 	<p>To address the significant issues, we decided to conduct a Design Sprint (format proposed by Google Ventures). </p> 
 </section>
 <section>
-	<h4>Sprint Team</h4>
+	<h2>Sprint Team</h2>
 	<p>The team was one product manager and two designers. We included people from sales, marketing, customer success and engineering in different sessions during the sprint.</p>
 </section>
 <section>
-	<h4>Long Term Goal and Sprint Questions</h4>
+	<h2>Long Term Goal and Sprint Questions</h2>
 	<p>
 		After series of discussions, we agreed on the following long term goal.
 	</p>
@@ -78,11 +78,11 @@ layout: default
 	</figure>
 </section>
 <section>
-	<h4>Expert Interviews</h4>
+	<h2>Expert Interviews</h2>
 	<p>We had identified and scheduled expert interviews before hand. The participants include people from Sales, Marketing, Customer Success and Engineering. We investigated their vision, feedback and concerns related to the campaigns. We also asked their opinions on long term goal and sprint questions. Based on that we made minor modifications for the sprint questions. </p>
 </section>
 <section>
-	<h4>Deriving Themes</h4>
+	<h2>Deriving Themes</h2>
 	<p>By combining data from customer interviews and stakeholder interviews, we came up with How Might We questions. Each person in the sprint team did it individually. After that together we grouped the how might we notes to derive themes and patterns. </p>
 	<figure class="article-img">
 		<img src="{{site.baseurl}}/assets/images/campaigns/hmwnotes.jpg">
@@ -90,7 +90,7 @@ layout: default
 	</figure>
 </section>
 <section>
-	<h4>Breaking Things Down</h4>
+	<h2>Breaking Things Down</h2>
 	<p>By understanding the customer concerns, and other feedbacks, we identified three parts of the overall experience. 
 		<ul>
 			<li>Scheduling</li>
@@ -99,7 +99,7 @@ layout: default
 		</ul>
 	</p>
 	<section>
-		<h5>Scheduling</h5>	
+		<h3>Scheduling</h3>	
 		<p>This where the user creates and schedule a campaign. Scheduling a campaign has multiple steps, and some steps use other product features. This understanding leads to the following discovery.
 		</p>
 		<p></p>
@@ -107,17 +107,17 @@ layout: default
 		</p>
 	</section>
 	<section>
-		<h5>Delivery</h5>
+		<h3>Delivery</h3>
 		<p>Once user schedules the campaign, it should reach to the recipients in the specified time. Delivery rate, delivery time, etc. plays a significant role here. </p>
 	</section>
 	<section>
-		<h5>Analysis</h5>
+		<h3>Analysis</h3>
 		<p>Measurement of the success or impact of the campaigns is critical for the customer. The current offering was not up to the mark when it comes to the analysis and the reporting</p>
 	</section>
 </section>
 
 <section>
-	<h4>Inspirations and Lightning Demos</h4>
+	<h2>Inspirations and Lightning Demos</h2>
 	<p>After defining the problems, we decided to study how others are solving similar problems. Each person worked individually and came with presentations demonstrating analogous inspirations. Interesting ideas are captured so that the team can use it later in the sprint. </p>
 	<figure class="article-img">
 		<img src="{{site.baseurl}}/assets/images/campaigns/capturingideas.jpg">
@@ -125,7 +125,7 @@ layout: default
 	</figure>
 </section>
 <section>
-	<h4>Exploring Solutions</h4>
+	<h2>Exploring Solutions</h2>
 	<p>At this stage, the walls in the sprint room were full of questions, notes, and ideas. Since the sprint team was small, everyone needed to work on all three major stages of the campaign experience. 
 	Everyone worked on creating solutions for each stage (scheduling, delivery and analysis). The team made use of four step sketching process. 
 	Each one presented their ideas, and the team shortlisted best ideas.
@@ -136,7 +136,7 @@ layout: default
 	</figure>
 </section>
 <section>
-	<h4>Storyboarding</h4>
+	<h2>Storyboarding</h2>
 	<p>We decided to convert the entire flow into a storyboard so that everyone gets the overall picture. It also helped us to communicate the whole experience with people outside of the sprint team. </p>
 	<figure class="article-img-small">
 		<img src="{{site.baseurl}}/assets/images/campaigns/storyboarding.jpg">
@@ -144,7 +144,7 @@ layout: default
 	</figure>
 </section>
 <section>
-	<h4>Prototyping</h4>
+	<h2>Prototyping</h2>
 	<p>The next stage was prototyping the solution. We assigned tasks for sprint team, and each person worked on different part of the prototype. One person was responsible for combining everything into one. Because of the time limitation, we had to skip a lot of details. At the same time, we made sure that, the prototype includes the core ideas. </p>
 	<figure class="article-img">
 		<img img-small src="{{site.baseurl}}/assets/images/campaigns/campaignhome.png">
@@ -152,14 +152,14 @@ layout: default
 	</figure>
 </section>
 <section>
-	<h4>Testing and Iterations</h4>
+	<h2>Testing and Iterations</h2>
 	<p>On the fifth day of the sprint, the prototype is presented to the people internally and collected the feedback. And during the customer interviews on the weeks followed, the prototype is presented to customers and made revisions.</p>
 	<figure class="article-img">
 			<img img-small src="{{site.baseurl}}/assets/images/campaigns/importcontacts-options.png">
 			<figcaption>Exploring Options for Import Contacts</figcaption>
 	</figure>
 	<section>
-		<h5>Search and Filter</h5>
+		<h3>Search and Filter</h3>
 		<p>For a given account, people across departments uses the dashboard. Some accounts have more than fifty users.To quickly discover the campaign user is looking, the search should be robust enough. The user can search the campaign by name, filter the campaign by status, who created, type of the campaign and date range</p>
 		<figure class="article-img">
 			<video controls>
@@ -170,7 +170,7 @@ layout: default
 	</figure>
 	</section>
 	<section>
-		<h5>The Wizard: Divide and Conquer</h5>
+		<h3>The Wizard: Divide and Conquer</h3>
 		<p>One issue with the current campaign was of context switching. The campaign depends on other features. For example, the flow builder where the user can create call flow for the campaign, the address book where the user can store the contacts, etc. We needed to ensure that the flow is not overwhelming users. Considering the complexity of the entire process, we decided to chunk the tasks so that user can deal each step with discrete mental space. </p>
 		<figure class="article-img">
 			<img img-small src="{{site.baseurl}}/assets/images/campaigns/campaign-setup.png">
@@ -185,7 +185,7 @@ layout: default
 	</figure>
 	</section>
 	<section>
-		<h5>Make it Personal</h5>
+		<h3>Make it Personal</h3>
 		<p>Most of our customers were using campaigns for promotional purposes.  Even though there are transactional uses for the campaign, people were not using it because there is no option to send personalised messages. During our customer interviews, this pattern was evident. Personalisation opens up a lot of opportunities that was not possible before. 
 		To enable these possibilities, we came up with a more advanced contact list manager</p>
 		<figure class="article-img">
@@ -193,11 +193,11 @@ layout: default
 			<figcaption>Content and Schedule</figcaption>
 		</figure>
 		<section>
-			<h6>Custom Fields</h6>
+			<h4>Custom Fields</h4>
 			<p>The user can create custom fields when they create the list. Before, it was too rigid and only supported some pre-defined fields. </p>
 		</section>
 		<section>
-			<h6>Tags</h6>
+			<h4>Tags</h4>
 			<p>The user can tag each field and use these tags as placeholders in the messages while composing them. If the user wants to include the name or personalised offer code or anything else, it is now super easy.</p>
 		</section>
 		<figure class="article-img">
@@ -206,7 +206,7 @@ layout: default
 		</figure>
 	</section>
 	<section>
-		<h5>Recurring Campaigns</h5>
+		<h3>Recurring Campaigns</h3>
 		<p>To simplify the process of creating similar campaigns, the team came up with recurring campaigns. The customer can schedule a campaign which runs on a specified time frame. Combining this with new list feature opens up the opportunity to automate the campaign. For example, a growth hacker can automate a recurring engagement campaign for newly signed up users each week. Once the campaign is scheduled, customers can dynamically update the list each week.</p>
 		<figure class="article-img">
 			<img img-small src="{{site.baseurl}}/assets/images/campaigns/recurring.png">
@@ -214,7 +214,7 @@ layout: default
 	</figure>
 	</section>
 	<section>
-		<h5>Duplicate campaigns</h5>
+		<h3>Duplicate campaigns</h3>
 		<p>During our research,  we figured out people were creating campaigns with little differences. For example, just the content changes or the time. It was painful for them to go through the same steps again and again since there was no way to duplicate the campaigns. To address these issues we came up with an option to duplicate the campaigns. </p>
 		<figure class="article-img">
 			<img img-small src="{{site.baseurl}}/assets/images/campaigns/confirm.png">
@@ -223,7 +223,7 @@ layout: default
 	</section>
 </section>
 <section>
-	<h4>API<span class="small-letter">s</span> for Everything</h4>
+	<h2>API<span class="small-letter">s</span> for Everything</h2>
 	<p>One of the questions addressed was about making the campaign flexible and extensible. There significant number of customers who uses the current call and SMS APIs. People have implemented the broad spectrum of solutions using these APIs. We decided to bring the same flexibility for campaigns and list. Once APIs are available, people can create solutions that fit their unique needs. </p>
 	<figure class="article-img">
 			<img img-small src="{{site.baseurl}}/assets/images/campaigns/listhome.png">
@@ -238,7 +238,7 @@ layout: default
 	</figure>
 </section>
 <section>
-	<h4>Detailed Specs</h4>
+	<h2>Detailed Specifications</h2>
 	<p>I created detailed documentation to communicate the design to the engineering team. It included the behaviour spec and user interface spec. 
 	</p>
 	<figure class="article-img">
