--- a/works.html
+++ b/works.html
@@ -1,20 +1,20 @@
 ---
 layout: default
 ---
-<h3>Selected Works</h3>
+<h1>Selected Works</h1>
 <section class="works">
-	<h4>Campaigns for Exotel</h4>
-	<p>Empower the customers to drive growth and engagement using calls and SMS.</p>
+	<h2>Campaigns for Exotel</h2>
+	<p class="lead">Empower the customers to drive growth and engagement.</p>
 	<p><a href="{{site.baseurl}}/campaigns">Read More ></a></p>
 </section>
 <section class="works">
-	<h4>Exotel Call Analytics</h4>
-	<p>Monitor, analyse and derive insights from voice communication data.</p>
+	<h2>Exotel Call Analytics</h2>
+	<p class="lead">Monitor, analyse and derive insights from voice communication data.</p>
 	<p><a href="{{site.baseurl}}/analytics">Read More ></a></p>
 </section>
 <section class="works">
-	<h4>Console for Exotel</h4>
-	<p>Better tool for customer support operations.</p>
+	<h2>Console for Exotel</h2>
+	<p class="lead">Better tool for customer support operations.</p>
 	<p><a href="{{site.baseurl}}/console">Read More ></a></p>
 </section> 	
 <p class="meta">Thanks to NDAs, I can't put all my works on this website. But I can walkthrough some of those works in person. </p>
