--- a/books.html
+++ b/books.html
@@ -1,31 +1,28 @@
 ---
 layout: default
 ---
-<h1>Books I Like</h1>
-<h2>Design</h2>
+<h1>Selected books</h1>
+<h3>Experience design</h3>
 <ul>
     <li>Designing Interactions by Bill Moggridge</li>
     <li>The Visual Display of Quantitative Information by Edward Tufte</li>
-    <li>Sketching User Experiences: Getting the Design Right and the Right Design by Bill Buxton</li>
+    <li>Sketching User Experiences by Bill Buxton</li>
     <li>Universal Principles of Design by William Lidwell</li>
     <li>On Web Typography by Jason Santa Maria</li>
     <li>Designing Interfaces by Jenifer Tidwell</li>
 </ul>
-<h2>Education</h2>
-<ul>
-    <li>Mindstorms: Children, Computers, And Powerful Ideas by Seymour Papert</li>
-    <li>The Society of Mind by Marvin Minsky</li>
-</ul>
-<h2>Fiction</h2>
+<h3>Fiction and essays</h3>
 <ul>
     <li>The Trial by Franz Kafka</li>
     <li>The Stranger by Albert Camus</li>
     <li>Crime and Punishment by Fyodor Dostoyevsky</li>
     <li>Randamoozham by M. T. Vasudevan Nair</li>
     <li>Khasakkinte Itihasam by O. V. Vijayan</li>
-</ul>
-<h2>Philosophy and Politics</h2>
-<ul>
     <li>The Myth of Sisyphus by Albert Camus</li>
+</ul>
+<h3>Ideas and perspectives</h3>
+<ul>
+    <li>Mindstorms by Seymour Papert</li>
+    <li>The Society of Mind by Marvin Minsky</li>
     <li>Annihilation of Caste by B. R. Ambedkar</li>
 </ul>
