--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 layout: default 
 ---
 <h1>Hello There.</h1>
-<p class="lead">I am Abdul Raoof.</p>
-<p class="lead">A designer from India.</p>
-<p class="lead">Currently working with <a href="https://www.informatica.com/">Informatica</a>.</p>
-<p class="lead">I <a href="{{site.baseurl}}/books">read</a>, I <a href="{{site.baseurl}}/journal">write</a>, and occassionally<a href="https://www.instagram.com/guidedfantasy/"> I click pictures</a>.</p>
+<p>I am Abdul Raoof.</p>
+<p>A designer from India.</p>
+<p>Currently working with <a href="https://www.informatica.com/">Informatica</a>.</p>
+<p>I <a href="{{site.baseurl}}/books">read</a>, I <a href="{{site.baseurl}}/journal">write</a>, and occassionally<a href="https://www.instagram.com/guidedfantasy/"> I click pictures</a>.</p>
 
 
 	
