--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ layout: default
 <h1>Hello There.</h1>
 <p>I am Abdul Raoof.</p>
 <p>A designer from India.</p>
-<p>Currently working with <a href="https://www.informatica.com/">Informatica</a>.</p>
-<p>I <a href="{{site.baseurl}}/books">read</a>, I <a href="{{site.baseurl}}/journal">write</a>, and occassionally<a href="https://www.instagram.com/guidedfantasy/"> I click pictures</a>.</p>
+<p>Currently working with Informatica.</p>
+<p>I <a href="{{site.baseurl}}/_pages/books.html">read</a>, I <a href="{{site.baseurl}}/_pages/journal.html">write</a>, and occassionally<a href="https://www.instagram.com/guidedfantasy/"> I click pictures</a>.</p>
 
 
 	
