fixed navigation, type etc

--- a/_pages/books.html
+++ b/_pages/books.html
@@ -1,5 +1,7 @@
 ---
 layout: default
+permalink: /books/
+title: Books
 ---
 <h1>Selected books</h1>
 <h3>Experience design</h3>
@@ -20,7 +22,7 @@ layout: default
     <li>Khasakkinte Itihasam by O. V. Vijayan</li>
     <li>The Myth of Sisyphus by Albert Camus</li>
 </ul>
-<h3>Ideas and perspectives</h3>
+<h3>Ideas of change</h3>
 <ul>
     <li>Mindstorms by Seymour Papert</li>
     <li>The Society of Mind by Marvin Minsky</li>
