--- a/_pages/work/campaigns.html
+++ b/_pages/work/campaigns.html
@@ -1,9 +1,8 @@
 ---
-layout: default
+layout: casestudy
+permalink: /works/campaigns/
+title: Works - Campaigns for Exotel
 ---
-<section>
-	<p><a href="{{site.baseurl}}/works"> < Back to works</a></p>
-</section>
 <h1>Exotel Campaigns</h1>
 <p class="lead">How might we enable the customers to drive growth and engagement using calls and SMS?</p>
 <section>
@@ -39,15 +38,13 @@ layout: default
 		<p>
 			The major insights from the research were the following. 
 		</p>
-		<p>
-			<ul>
-				<li>Campaign creation is painful since there are multiple things to be taken cared such as template approval, creating flow, adding and managing recipients.</li>
-				<li>Analysis of result is not straightforward. Campaign wise reports are not available for download. The user needs to go through series of steps to access the reports. </li>
-				<li>The campaign is static. It is limiting the transactional use cases since there is no option for personalisation.</li>
-				<li>The contact list is not flexible. It results in extra burden in analysing and reporting.</li>
-				<li>The user needs to go through the same steps again and again while creating the campaigns with subtle differences.</li>
-			</ul>
-		</p>
+        <ul>
+            <li>Campaign creation is painful since there are multiple things to be taken cared such as template approval, creating flow, adding and managing recipients.</li>
+            <li>Analysis of result is not straightforward. Campaign wise reports are not available for download. The user needs to go through series of steps to access the reports. </li>
+            <li>The campaign is static. It is limiting the transactional use cases since there is no option for personalisation.</li>
+            <li>The contact list is not flexible. It results in extra burden in analysing and reporting.</li>
+            <li>The user needs to go through the same steps again and again while creating the campaigns with subtle differences.</li>
+        </ul>
 	</section>
 </section>
 <section>
@@ -245,9 +242,6 @@ layout: default
 		<img img-small src="{{site.baseurl}}/assets/images/campaigns/spec.png">
 		<figcaption>Behaviour and UI Spec</figcaption>
 	</figure>
-</section>
-<section>
-	<p><a href="{{site.baseurl}}/works">More Works ></a></p>
 </section>
 
 
