--- a/_pages/work/console.html
+++ b/_pages/work/console.html
@@ -1,9 +1,8 @@
 ---
-layout: default
+layout: casestudy
+permalink: /works/console/
+title: Works - Console for Exotel
 ---
-<section>
-	<p><a href="{{site.baseurl}}/works"> < Back to works</a></p>
-</section>
 <h1>CONSOLE FOR EXOTEL</h1>
 <p class="lead">As the number of customers increases, the customer support operations need to be streamlined. Internal tools can help to achieve that goal.</p>
 
@@ -15,7 +14,7 @@ layout: default
 
 <section>
     <h2>GOAL</h2>
-    <p>The goal of the project was to improve customer experience by following means. 
+    <p>The goal of the project was to improve customer experience by following means.</p> 
     <ul>
         <li>Reduce response time on support tickets</li>
         <li>Provide quality resolutions for customer queries </li>
@@ -127,6 +126,3 @@ layout: default
     <p>The application got well received by the support team. It enabled the team to debug and identify the issues themselves. That means quicker resolution of support tickets and better customer experience.</p>
     <p>There are other features in the roadmap. The team will be working on those features in next releases and improvement of current features.</p>
  </section>
-<section>
-	<p><a href="{{site.baseurl}}/works">More Works ></a></p>
-</section>
