--- a/_pages/work/works.html
+++ b/_pages/work/works.html
@@ -1,20 +1,21 @@
 ---
 layout: default
+permalink: /works/
+title: Works
 ---
 <h1>Selected Works</h1>
 <section class="works">
 	<h2>Campaigns for Exotel</h2>
 	<p class="lead">Empower the customers to drive growth and engagement.</p>
-	<p><a href="{{site.baseurl}}/campaigns">Read More ></a></p>
+	<p><a href="{{site.baseurl}}/works/campaigns/">Read More ></a></p>
 </section>
 <section class="works">
 	<h2>Exotel Call Analytics</h2>
 	<p class="lead">Monitor, analyse and derive insights from voice communication data.</p>
-	<p><a href="{{site.baseurl}}/analytics">Read More ></a></p>
+	<p><a href="{{site.baseurl}}/works/analytics/">Read More ></a></p>
 </section>
 <section class="works">
 	<h2>Console for Exotel</h2>
 	<p class="lead">Better tool for customer support operations.</p>
-	<p><a href="{{site.baseurl}}/console">Read More ></a></p>
+	<p><a href="{{site.baseurl}}/works/console/">Read More ></a></p>
 </section> 	
-<p class="meta">Thanks to NDAs, I can't put all my works on this website. But I can walkthrough some of those works in person. </p>
