--- a/_pages/work/analytics.html
+++ b/_pages/work/analytics.html
@@ -1,9 +1,8 @@
 ---
-layout: default
+layout: casestudy
+permalink: /works/analytics/
+title: Works - Analytics for Exotel
 ---
-<section>
-	<p><a href="{{site.baseurl}}/works"> < Back to works</a></p>
-</section>
 <h1>Exotel Call Analytics</h1>
 <p class="lead"></p>
 <p class="lead">Monitor, analyse and derive insights from voice communication data. </p>
@@ -15,12 +14,12 @@ layout: default
 </section>
 <section>
 	<h2>Understanding the problem</h2>
-	<p>The product has an extensive reporting for calls and SMS. Through customer interviews and support queries it was evident that people are having difficulties in getting an overview of the calls and SMS. To get the overview, they need to go through multiple steps. 
+    <p>The product has an extensive reporting for calls and SMS. Through customer interviews and support queries it was evident that people are having difficulties in getting an overview of the calls and SMS. To get the overview, they need to go through multiple steps.</p> 
 	<ul>
 		<li>Download the reports</li>
 		<li>Visualise it with the help of Excel sheets or data visualisation tools </li>
 	</ul>
-	In customer interviews, people often talked about these problems.</p>
+	<p>In customer interviews, people often talked about these problems.</p>
 </section>
 <section>
 	<h2>The Goal</h2>
@@ -65,14 +64,16 @@ layout: default
 		<p>It provides an overview of the groups. Groups can be sales and support for contact centre operations. In logistics use case it can be locations, and in marketplace use case it can be product categories or channels. </p>
 		<figure class="article-img">
 			<img src="{{site.baseurl}}/assets/images/analytics/level2.png">
-		<figcaption>Group Level Info</figcaption>
+		    <figcaption>Group Level Info</figcaption>
+        </figure>
 	</section>
 		<section>
 		<h3>Level3: Activity of Agents</h3>
 		<p>It helps customers to measure the individual performance. It also enables the comparison between the agents. </p>
 		<figure class="article-img">
 			<img src="{{site.baseurl}}/assets/images/analytics/level3.png">
-		<figcaption>Agent Level Info</figcaption>
+		    <figcaption>Agent Level Info</figcaption>
+        </figure>
 	</section>
 		<section>
 		<h3>Customizations</h3>
@@ -87,16 +88,10 @@ layout: default
 	<p>People cannot take the decision based on the data alone. To make meaningful comparisons and derive insights they need context. The decision to include the graph for the call distributions and the ticker which compares the data displayed with a previous time frame help users to answer the question "compared to what?".The decision to include the graph for the call distributions and the ticker which compares the data displayed with a previous time frame are intended to answer the question "compared to what?". </p>
 	<figure class="article-img">
 		<img src="{{site.baseurl}}/assets/images/analytics/dashboard1.png">
-	<figcaption>The Analytics Dashboard</figcaption>
+	    <figcaption>The Analytics Dashboard</figcaption>
+    </figure>
 </section>
 <section>
 	<h2>More information &#x2260 better insights</h2>
 	<p>The information provided on the dashboard should not overwhelm the person who is looking at it. So we decided to show what is necessary to identify patterns and issues in the first place. The graphs reveal extra information whenever required.</p>
-</section>
-<!-- <section>
-	<h2>Conclusion</h2>
-	<p></p>
-</section> -->
-<section>
-	<p><a href="{{site.baseurl}}/works">More Works ></a></p>
 </section>
