--- a/_pages/work/works.html
+++ b/_pages/work/works.html
@@ -7,15 +7,15 @@ title: Works
 <section class="works">
 	<h2>Campaigns for Exotel</h2>
 	<p class="lead">Empower the customers to drive growth and engagement.</p>
-	<p><a href="{{site.baseurl}}/works/campaigns/">Read More ></a></p>
+	<p><a href="{{site.baseurl}}/works/campaigns/">Read the case study <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a></p>
 </section>
 <section class="works">
 	<h2>Exotel Call Analytics</h2>
 	<p class="lead">Monitor, analyse and derive insights from voice communication data.</p>
-	<p><a href="{{site.baseurl}}/works/analytics/">Read More ></a></p>
+	<p><a href="{{site.baseurl}}/works/analytics/">Read the case study <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a></p>
 </section>
 <section class="works">
 	<h2>Console for Exotel</h2>
 	<p class="lead">Better tool for customer support operations.</p>
-	<p><a href="{{site.baseurl}}/works/console/">Read More ></a></p>
+	<p><a href="{{site.baseurl}}/works/console/">Read the case study <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a></p>
 </section> 	
