new design initial version

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -1,13 +1,13 @@
 ---
-layout: default 
+layout: default
 permalink: /
 
 ---
-<h1>Hello There.</h1>
-<p>I am Abdul Raoof.</p>
-<p>A designer from India.</p>
-<p>Currently working with Informatica.</p>
-<p>I <a href="{{site.baseurl}}/books/">read</a>, I <a href="{{site.baseurl}}/journal">write</a>, and occassionally<a href="https://www.instagram.com/guidedfantasy/"> I click pictures</a>.</p>
-
-
-	
+<p class="bio">I am <strong>Abdul Raoof Biyyanaden</strong>, a designer with over 12 years of experience designing enterprise cloud applications.  I am currently working as a Principal UX Designer at <a href="https://www.informatica.com/"
+    target="_blank">Informatica</a>, and
+    have previously worked with <a href="https://exotel.com/"
+    target="_blank">Exotel</a> and <a href="https://www.tcs.com/"
+    target="_blank">Tata Consultancy Services</a>. I
+    have designed products from concept to delivery, combining user research, analytics, and problem-solving to drive
+    smart decisions within cross-functional teams. My design philosophy centers on <a href="https://tinyurl.com/mr352vem"
+        target="_blank">system thinking</a>, creating cohesive experiences that scale with business needs.</p>
