css grid setup, fixed main.scss, and minor fixes

--- a/_pages/readings.html
+++ b/_pages/readings.html
@@ -4,27 +4,37 @@ permalink: /reading/
 title: Reading
 ---
 <h1>Selected books</h1>
-<h3>Experience design</h3>
-<ul>
-    <li>Designing Interactions by Bill Moggridge</li>
-    <li>The Visual Display of Quantitative Information by Edward Tufte</li>
-    <li>Sketching User Experiences by Bill Buxton</li>
-    <li>Universal Principles of Design by William Lidwell</li>
-    <li>On Web Typography by Jason Santa Maria</li>
-    <li>Designing Interfaces by Jenifer Tidwell</li>
-</ul>
-<h3>Fiction and essays</h3>
-<ul>
-    <li>The Trial by Franz Kafka</li>
-    <li>The Stranger by Albert Camus</li>
-    <li>Crime and Punishment by Fyodor Dostoyevsky</li>
-    <li>Randamoozham by M. T. Vasudevan Nair</li>
-    <li>Khasakkinte Itihasam by O. V. Vijayan</li>
-    <li>The Myth of Sisyphus by Albert Camus</li>
-</ul>
-<h3>Ideas of change</h3>
-<ul>
-    <li>Mindstorms by Seymour Papert</li>
-    <li>The Society of Mind by Marvin Minsky</li>
-    <li>Annihilation of Caste by B. R. Ambedkar</li>
-</ul>
+<article class="reading">
+    <div class="thumbnail">
+        <img src="" alt="">
+    </div>
+   <h1>Designing Interactions</h1> 
+   <h2>Bill Moggridge</h2>
+</article>
+
+<!-- <div class="books">
+    <h3>Experience design</h3>
+    <ul>
+        <li>Designing Interactions by Bill Moggridge</li>
+        <li>The Visual Display of Quantitative Information by Edward Tufte</li>
+        <li>Sketching User Experiences by Bill Buxton</li>
+        <li>Universal Principles of Design by William Lidwell</li>
+        <li>On Web Typography by Jason Santa Maria</li>
+        <li>Designing Interfaces by Jenifer Tidwell</li>
+    </ul>
+    <h3>Fiction and essays</h3>
+    <ul>
+        <li>The Trial by Franz Kafka</li>
+        <li>The Stranger by Albert Camus</li>
+        <li>Crime and Punishment by Fyodor Dostoyevsky</li>
+        <li>Randamoozham by M. T. Vasudevan Nair</li>
+        <li>Khasakkinte Itihasam by O. V. Vijayan</li>
+        <li>The Myth of Sisyphus by Albert Camus</li>
+    </ul>
+    <h3>Ideas of change</h3>
+    <ul>
+        <li>Mindstorms by Seymour Papert</li>
+        <li>The Society of Mind by Marvin Minsky</li>
+        <li>Annihilation of Caste by B. R. Ambedkar</li>
+    </ul>
+</div> -->
