--- a/_pages/index.html
+++ b/_pages/index.html
@@ -3,11 +3,16 @@ layout: default
 permalink: /
 
 ---
-<p class="bio">I am <strong>Abdul Raoof Biyyanaden</strong>, a designer with over 12 years of experience designing enterprise cloud applications.  I am currently working as a Principal UX Designer at <a href="https://www.informatica.com/"
-    target="_blank">Informatica</a>, and
-    have previously worked with <a href="https://exotel.com/"
-    target="_blank">Exotel</a> and <a href="https://www.tcs.com/"
-    target="_blank">Tata Consultancy Services</a>. I
-    have designed products from concept to delivery, combining user research, analytics, and problem-solving to drive
-    smart decisions within cross-functional teams. My design philosophy centers on <a href="https://tinyurl.com/mr352vem"
-        target="_blank">system thinking</a>, creating cohesive experiences that scale with business needs.</p>
+    <img src="{{site.baseurl}}/assets/images/headshot.jpg" alt="profile" class="headshot">
+    <p class="bio">I am <strong>Abdul Raoof Biyyanaden</strong>, a Principal UX Designer with 12+ years of experience
+        designing enterprise cloud applications. Currently at <a href="https://www.informatica.com/"
+            target="_blank">Informatica</a>, with previous experience at <a href="https://exotel.com/"
+            target="_blank">Exotel</a> and <a href="https://www.tcs.com/" target="_blank">Tata Consultancy Services</a>,
+        I
+        have designed end-to-end product experiences that solve real user problems and drive business results. By
+        combining
+        user research with data analytics, I've partnered with cross-functional teams from concept validation to
+        successful
+        launches, balancing user needs with business goals. My design philosophy centers on <a
+            href="https://tinyurl.com/mr352vem" target="_blank">system thinking</a>, creating cohesive experiences that
+        scale with business needs.</p>
