further fixes on the readings grid

--- a/_pages/readings.html
+++ b/_pages/readings.html
@@ -8,113 +8,121 @@ title: Reading
     <a href="reading_link">
         <article class="reading">
             <div class="thumbnail">
-                <img src="{{site.baseurl}}/assets/images/readings/02_designing_interactions.jpg" alt="">
+                <img src="{{site.baseurl}}/assets/images/readings/02_designing_interactions.jpg"
+                    alt="Deisgning Interactions">
             </div>
-            <h1>Deisgning Interactions</h1>
-            <h2>Bill Moggridge</h2>
+            <h2>Deisgning Interactions</h2>
+            <h3>Bill Moggridge</h3>
         </article>
     </a>
     <a href="reading_link">
         <article class="reading">
             <div class="thumbnail">
                 <img src="{{site.baseurl}}/assets/images/readings/03_visual_display_of_quantitive_information.jpg"
-                    alt="">
+                    alt="Visual Display of Quantitative Information">
             </div>
-            <h1>Visual Display of Quantitative Information</h1>
-            <h2>Edward Tufte</h2>
+            <h2>Visual Display of Quantitative Information</h2>
+            <h3>Edward Tufte</h3>
         </article>
 
     </a>
     <a href="reading_link">
         <article class="reading">
             <div class="thumbnail">
-                <img src="{{site.baseurl}}/assets/images/readings/04_sketching_user_experiences.jpg" alt="">
+                <img src="{{site.baseurl}}/assets/images/readings/04_sketching_user_experiences.jpg"
+                    alt="Sketching User Experiences">
             </div>
-            <h1>Sketching User Experiences</h1>
-            <h2>Bill Buxton</h2>
+            <h2>Sketching User Experiences</h2>
+            <h3>Bill Buxton</h3>
         </article>
     </a>
     <a href="reading_link">
         <article class="reading">
             <div class="thumbnail">
-                <img src="{{site.baseurl}}/assets/images/readings/05_universal_principles_of_design.jpg" alt="">
+                <img src="{{site.baseurl}}/assets/images/readings/05_universal_principles_of_design.jpg"
+                    alt="Universal Principles of Design">
             </div>
-            <h1>Universal Principles of Design</h1>
-            <h2>William Lidwell</h2>
+            <h2>Universal Principles of Design</h2>
+            <h3>William Lidwell</h3>
         </article>
     </a>
     <a href="reading_link">
         <article class="reading">
             <div class="thumbnail">
-                <img src="{{site.baseurl}}/assets/images/readings/06_designing_interfaces.jpg" alt="">
+                <img src="{{site.baseurl}}/assets/images/readings/06_designing_interfaces.jpg"
+                    alt="Designing Interfaces">
             </div>
-            <h1>Designing Interfaces</h1>
-            <h2>Jenifer Tidwell</h2>
+            <h2>Designing Interfaces</h2>
+            <h3>Jenifer Tidwell</h3>
         </article>
     </a>
     <a href="reading_link">
         <article class="reading">
             <div class="thumbnail">
-                <img src="{{site.baseurl}}/assets/images/readings/07_mindstorms.jpg" alt="">
+                <img src="{{site.baseurl}}/assets/images/readings/07_mindstorms.jpg" alt="Mindstorms">
             </div>
-            <h1>Mindstorms</h1>
-            <h2>Seymour Papert</h2>
+            <h2>Mindstorms</h2>
+            <h3>Seymour Papert</h3>
         </article>
     </a>
     <a href="reading_link">
         <article class="reading">
             <div class="thumbnail">
-                <img src="{{site.baseurl}}/assets/images/readings/08_about_face.jpg" alt="">
+                <img src="{{site.baseurl}}/assets/images/readings/08_about_face.jpg" alt="About Face">
             </div>
-            <h1>About Face</h1>
-            <h2>Alan Copper</h2>
-        </article>
-    </a>
-    <a href="reading_link">
-
-        <article class="reading">
-            <div class="thumbnail">
-                <img src="{{site.baseurl}}/assets/images/readings/09_the_ux_team_of_one.jpg" alt="">
-            </div>
-            <h1>The User Experience Team of One</h1>
-            <h2>Leah Buley</h2>
-        </article>
-    </a>
-    <a href="reading_link">
-        <article class="reading">
-            <div class="thumbnail">
-                <img src="{{site.baseurl}}/assets/images/readings/10_shape_of_design.jpg" alt="">
-            </div>
-            <h1>The Shape of Design</h1>
-            <h2>Frank Chimero</h2>
+            <h2>About Face</h2>
+            <h3>Alan Copper</h3>
         </article>
     </a>
     <a href="reading_link">
 
         <article class="reading">
             <div class="thumbnail">
-                <img src="{{site.baseurl}}/assets/images/readings/11_communicating_design.jpg" alt="">
+                <img src="{{site.baseurl}}/assets/images/readings/09_the_ux_team_of_one.jpg"
+                    alt="The User Experience Team of One">
             </div>
-            <h1>Communicating Design</h1>
-            <h2>Dan Brown</h2>
+            <h2>The User Experience Team of One</h2>
+            <h3>Leah Buley</h3>
         </article>
     </a>
     <a href="reading_link">
         <article class="reading">
             <div class="thumbnail">
-                <img src="{{site.baseurl}}/assets/images/readings/01_just_enough_research.jpg" alt="">
+                <img src="{{site.baseurl}}/assets/images/readings/10_shape_of_design.jpg" alt="The Shape of Design">
             </div>
-            <h1>Just Enough Research</h1>
-            <h2>Erika Hall</h2>
+            <h2>The Shape of Design</h2>
+            <h3>Frank Chimero</h3>
+        </article>
+    </a>
+    <a href="reading_link">
+
+        <article class="reading">
+            <div class="thumbnail">
+                <img src="{{site.baseurl}}/assets/images/readings/11_communicating_design.jpg"
+                    alt="Communicating Design">
+            </div>
+            <h2>Communicating Design</h2>
+            <h3>Dan Brown</h3>
         </article>
     </a>
     <a href="reading_link">
         <article class="reading">
             <div class="thumbnail">
-                <img src="{{site.baseurl}}/assets/images/readings/12_design_of_everyday_things.jpg" alt="">
+                <img src="{{site.baseurl}}/assets/images/readings/01_just_enough_research.jpg"
+                    alt="Just Enough Research">
             </div>
-            <h1>The Design of Everyday Things</h1>
-            <h2>Don Norman</h2>
+            <h2>Just Enough Research</h2>
+            <h3>Erika Hall</h3>
+        </article>
+    </a>
+    <a href="reading_link">
+        <article class="reading">
+            <div class="thumbnail">
+                <img src="{{site.baseurl}}/assets/images/readings/12_design_of_everyday_things.jpg"
+                    alt="The Design of Everyday Things">
+            </div>
+            <h2>The Design of Everyday Things</h2>
+            <h3>Don Norman</h3>
         </article>
     </a>
 </div>
