fixed grid for all the pages

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -3,6 +3,7 @@ layout: default
 permalink: /
 
 ---
+<div class="bio_wrapper">
     <img src="{{site.baseurl}}/assets/images/headshot.jpg" alt="profile" class="headshot">
     <p class="bio">I am <strong>Abdul Raoof Biyyanaden</strong>, a Principal UX Designer with 12+ years of experience
         designing enterprise cloud applications. Currently at <a href="https://www.informatica.com/"
@@ -16,3 +17,5 @@ permalink: /
         launches, balancing user needs with business goals. My design philosophy centers on <a
             href="https://tinyurl.com/mr352vem" target="_blank">system thinking</a>, creating cohesive experiences that
         scale with business needs.</p>
+</div>
+
