--- a/_pages/quotes.html
+++ b/_pages/quotes.html
@@ -4,7 +4,7 @@ permalink: /quotes/
 title: Quotes
 ---
 <h1>Quotes</h1>
-<div class="quote">
+<div class="quotes_wrapper">
 	<blockquote>
 		<p>For what they show us is what we see.</p>
 		<p>What we find is what we see.</p>
