--- a/_pages/index.html
+++ b/_pages/index.html
@@ -5,7 +5,7 @@ permalink: /
 ---
 <div class="bio_wrapper">
     <img src="{{site.baseurl}}/assets/images/headshot.jpg" alt="profile" class="headshot">
-    <p class="bio">I am <strong>Abdul Raoof Biyyanaden</strong>, a Principal UX Designer with 12+ years of experience
+    <p class="bio">I am <strong class="text_gradient">Abdul Raoof Biyyanaden</strong>, a Principal Product Designer with 12+ years of experience
         designing enterprise cloud applications. Currently at <a href="https://www.informatica.com/"
             target="_blank">Informatica</a>, with previous experience at <a href="https://exotel.com/"
             target="_blank">Exotel</a> and <a href="https://www.tcs.com/" target="_blank">Tata Consultancy Services</a>,
