--- a/_pages/readings.html
+++ b/_pages/readings.html
@@ -5,7 +5,7 @@ title: Reading
 ---
 <h1>Books</h1>
 <div class="readings_wrapper">
-    <a href="reading_link">
+    <a href="https://mitpress.mit.edu/9780262134743/designing-interactions/" target="_blank">
         <article class="reading">
             <div class="thumbnail">
                 <img src="{{site.baseurl}}/assets/images/readings/02_designing_interactions.jpg"
@@ -15,7 +15,7 @@ title: Reading
             <h3>Bill Moggridge</h3>
         </article>
     </a>
-    <a href="reading_link">
+    <a href="https://www.edwardtufte.com/book/the-visual-display-of-quantitative-information/" target="_blank">
         <article class="reading">
             <div class="thumbnail">
                 <img src="{{site.baseurl}}/assets/images/readings/03_visual_display_of_quantitive_information.jpg"
@@ -26,7 +26,7 @@ title: Reading
         </article>
 
     </a>
-    <a href="reading_link">
+    <a href="https://www.sciencedirect.com/book/9780123740373/sketching-user-experiences#book-description" target="_blank">
         <article class="reading">
             <div class="thumbnail">
                 <img src="{{site.baseurl}}/assets/images/readings/04_sketching_user_experiences.jpg"
@@ -36,7 +36,7 @@ title: Reading
             <h3>Bill Buxton</h3>
         </article>
     </a>
-    <a href="reading_link">
+    <a href="https://universalprinciplesofdesign.com/books" target="_blank">
         <article class="reading">
             <div class="thumbnail">
                 <img src="{{site.baseurl}}/assets/images/readings/05_universal_principles_of_design.jpg"
@@ -46,7 +46,7 @@ title: Reading
             <h3>William Lidwell</h3>
         </article>
     </a>
-    <a href="reading_link">
+    <a href="https://www.oreilly.com/library/view/designing-interfaces-2nd/9781449379711/" target="_blank">
         <article class="reading">
             <div class="thumbnail">
                 <img src="{{site.baseurl}}/assets/images/readings/06_designing_interfaces.jpg"
@@ -56,7 +56,7 @@ title: Reading
             <h3>Jenifer Tidwell</h3>
         </article>
     </a>
-    <a href="reading_link">
+    <a href="https://www.media.mit.edu/publications/mindstorms/" target="_blank">
         <article class="reading">
             <div class="thumbnail">
                 <img src="{{site.baseurl}}/assets/images/readings/07_mindstorms.jpg" alt="Mindstorms">
@@ -65,7 +65,7 @@ title: Reading
             <h3>Seymour Papert</h3>
         </article>
     </a>
-    <a href="reading_link">
+    <a href="https://www.wiley.com/en-gb/About+Face%3A+The+Essentials+of+Interaction+Design%2C+4th+Edition-p-9781118766576" target="_blank">
         <article class="reading">
             <div class="thumbnail">
                 <img src="{{site.baseurl}}/assets/images/readings/08_about_face.jpg" alt="About Face">
@@ -74,7 +74,7 @@ title: Reading
             <h3>Alan Copper</h3>
         </article>
     </a>
-    <a href="reading_link">
+    <a href="https://rosenfeldmedia.com/books/the-user-experience-team-of-one-second-edition/" target="_blank">
 
         <article class="reading">
             <div class="thumbnail">
@@ -85,7 +85,7 @@ title: Reading
             <h3>Leah Buley</h3>
         </article>
     </a>
-    <a href="reading_link">
+    <a href="https://shapeofdesignbook.com/" target="_blank">
         <article class="reading">
             <div class="thumbnail">
                 <img src="{{site.baseurl}}/assets/images/readings/10_shape_of_design.jpg" alt="The Shape of Design">
@@ -94,7 +94,7 @@ title: Reading
             <h3>Frank Chimero</h3>
         </article>
     </a>
-    <a href="reading_link">
+    <a href="https://www.oreilly.com/library/view/communicating-design-developing/9780131385399/">
         <article class="reading">
             <div class="thumbnail">
                 <img src="{{site.baseurl}}/assets/images/readings/11_communicating_design.jpg"
@@ -104,7 +104,7 @@ title: Reading
             <h3>Dan Brown</h3>
         </article>
     </a>
-    <a href="reading_link">
+    <a href="https://www.mulebooks.com/just-enough-research" target="_blank">
         <article class="reading">
             <div class="thumbnail">
                 <img src="{{site.baseurl}}/assets/images/readings/01_just_enough_research.jpg"
@@ -114,7 +114,7 @@ title: Reading
             <h3>Erika Hall</h3>
         </article>
     </a>
-    <a href="reading_link">
+    <a href="https://www.nngroup.com/books/design-everyday-things-revised/" target="_blank">
         <article class="reading">
             <div class="thumbnail">
                 <img src="{{site.baseurl}}/assets/images/readings/12_design_of_everyday_things.jpg"
