--- a/_pages/work/works.html
+++ b/_pages/work/works.html
@@ -12,15 +12,18 @@ title: Works
 			<p>Read the case study <i class="fa fa-long-arrow-right" aria-hidden="true"></i></p>
 		</section>
 	</a>
-
-	<section class="works">
-		<h2>Exotel Call Analytics</h2>
-		<p class="lead">Monitor, analyse and derive insights from voice communication data.</p>
-		<p><a href="{{site.baseurl}}/works/analytics/">Read the case study <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a></p>
-	</section>
-	<section class="works">
-		<h2>Console for Exotel</h2>
-		<p class="lead">Better tool for customer support operations.</p>
-		<p><a href="{{site.baseurl}}/works/console/">Read the case study <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a></p>
-	</section> 	
+	<a href="{{site.baseurl}}/works/analytics/">
+		<section class="works">
+			<h2>Exotel Call Analytics</h2>
+			<p class="lead">Monitor, analyse and derive insights from voice communication data.</p>
+			<p>Read the case study <i class="fa fa-long-arrow-right" aria-hidden="true"></i></p>
+		</section>
+	</a>
+	<a href="{{site.baseurl}}/works/console/">
+		<section class="works">
+			<h2>Console for Exotel</h2>
+			<p class="lead">Better tool for customer support operations.</p>
+			<p>Read the case study <i class="fa fa-long-arrow-right" aria-hidden="true"></i></p>
+		</section>
+	</a>
 </div>
